Fix spacing for getting started info tour

--- a/client/web/src/search/results/components/new-search-content/NewSearchContent.module.scss
+++ b/client/web/src/search/results/components/new-search-content/NewSearchContent.module.scss
@@ -164,11 +164,6 @@
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
-        padding: 0.5rem;
-
-        &:empty {
-            display: none;
-        }
     }
 }
 
